--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,27 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Y Media Labs Engineering Blog 
+description: 
+meta_description: "Y Media Labs Engineering Blog"
 
-aboutPage: true
+aboutPage: false
 
 markdown: redcarpet
 highlighter: pygments
 
-paginate: 20
+exclude: [vendor]
+
+paginate: 5
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
-google_analytics: 'UA-XXXXXXXX-X'
+domain_name: 'http://.com'
+google_analytics: 
 disqus: false
-disqus_shortname: 'your-disqus-shortname'
+disqus_shortname: 
 
 # Details for the RSS feed generator
-url:            'http://your-blog-url.example.com'
-author:         'Your Name'
-authorTwitter:  'YourTwitterUsername'
+url:            'http://.com'
+author:         'YMediaLabs'
+authorTwitter:  'ymedialabs'
 
-permalink:       /:year/:title/
+permalink:       /blog/:year/:month/:day/:title/
 
 defaults:
     -
