--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Y Media Labs Engineering Blog 
-description: 
+name: Y Media Labs
+description: Engineering Blog 
 meta_description: "Y Media Labs Engineering Blog"
 
 aboutPage: false
