--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Y Media Labs
+name: Y Media Labs Engineering Blog
 description: Engineering Blog 
 meta_description: "Y Media Labs Engineering Blog"
 
